# parlane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
benchmarks/: bench_vs_stdlib.py
src/parlane/: __init__.py  _async.py  _backend.py  _config.py  _detection.py  _errors.py  _pipeline.py  _progress.py  _types.py  api.py
tests/: conftest.py  test_api.py  test_async.py  test_backend.py  test_detection.py  test_errors.py  test_internals.py  test_pipeline.py  test_progress.py
