[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "parlane"
dynamic = ["version"]
description = "Dead-simple parallel data processing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "owl-tech-sui" }]
keywords = ["parallel", "concurrent", "multiprocessing", "threading", "gil-free"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
progress = [
    "tqdm>=4.60",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-asyncio>=0.23",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]
dev = [
    "parlane[test,lint,progress]",
]

[project.urls]
Homepage = "https://github.com/owl-tech-sui/parlane"
Repository = "https://github.com/owl-tech-sui/parlane"
Issues = "https://github.com/owl-tech-sui/parlane/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/parlane/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/parlane"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
exclude = ["src/parlane/_version.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["parlane"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
asyncio_mode = "strict"
